# flex-translate

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/libs/: README-sherpa-noort.md
apps/android/app/src/main/cpp/: CMakeLists.prebuilt.txt  CMakeLists.txt  milmmt_jni.cpp
apps/android/app/src/main/cpp/llama.cpp/: PROVENANCE.md
apps/android/app/src/main/cpp/prebuilt/: CMakeLists.txt
apps/android/app/src/main/cpp/prebuilt-libs/: README.md
apps/android/scripts/: fetch_llama_prebuilt.sh  verify_llama_symbols.py
apps/ios/: project.yml
apps/ios/FlexTranslate/: Info.plist
apps/ios/FlexTranslate/Tests/: AudioPipelineTests.swift  GeminiFlashTranslationProviderTests.swift  I18nParityTests.swift  M2m100Tests.swift  MilmmtMtProviderTests.swift  ModelDownloadEngineTests.swift  MtSimulatorUITest.swift
apps/ios/scripts/: fetch_llama_ios.sh  fetch_sherpa_ios.sh
benchmarks/asr/: README.md  corpus_manifest.sample.json  run_asr_benchmark.py
benchmarks/asr/results/: mock-validation.json
benchmarks/device-lab/: run_milmmt_device_demo.sh
benchmarks/device-lab/model-artifacts/en-zipformer-mid-high-2023-06-26/: legal-review-evidence.json  model-manifest.json  package-evidence.json  runtime-conversion-evidence.json
benchmarks/device-lab/model-artifacts/m2m100-418m/: legal-review-evidence.json  model-manifest.json  package-evidence.json  runtime-conversion-evidence.json
benchmarks/device-lab/model-artifacts/milmmt-46-4b-q6/: legal-review-evidence.json  model-manifest.json  package-evidence.json  (+1 more)
benchmarks/device-lab/results/: onbench-sm-s937b.json  ws3-a2-device-demo.json  ws3-a2-recognizer-logcat.txt  ws3-a2-zh-device-demo.json  ws3-a2-zh-recognizer-logcat.txt
benchmarks/device-lab/samples/: asr-result.not-claimed.json  battery-thermal.asr.fixture.json  battery-thermal.mt.fixture.json  device-metadata.asr.fixture.json  legal-review.asr.fixture.json  legal-review.milmmt.fixture.json  model-manifest.asr.internal.json  model-manifest.milmmt.internal.json  mt-result.not-claimed.json  package-evidence.asr.fixture.json  package-evidence.milmmt.fixture.json  runtime-conversion.asr.fixture.json  runtime-conversion.milmmt.fixture.json  telemetry.mt.valid.jsonl  telemetry.valid.jsonl
benchmarks/mt/: README.md  corpus_manifest.sample.json  run_mt_benchmark.py
benchmarks/mt/results/: mock-validation.json
configs/: asr-candidates.json  cloud-providers.json  device-lab-matrix.json  mobile-mcp-scenarios.json  mt-candidates.json
docs/architecture/: mobile-foundation.md
docs/benchmarks/: device-lab-intake.generated.json  device-lab-intake.generated.md  device-lab-readiness.generated.json  device-lab-readiness.generated.md  device-lab-run-plan.generated.md  device-lab-runbook.md  proof-coverage.generated.json  proof-coverage.generated.md  proof-retry-decision.generated.json  proof-retry-decision.generated.md  support-matrix.generated.md
docs/design/: aquacard-design-tokens.md  ws1-screens.md  ws5-gemini-flash.md  ws6-telemetry-benchmark.md
docs/legal/: model-distribution-checklist.md
docs/product/: phase-0-contract.md
docs/qa/: android-permission-ux-runbook.md  completion-audit.generated.md  mobile-mcp-automation.md  release-gate.md  review-ws0-ws4-and-cleanup-inventory.md
docs/research/: asr-proof.md  translation-runtime-proof.md
docs/security/: cloud-opt-in.md
schemas/: benchmark-result.schema.json  model-manifest.schema.json  telemetry-event.schema.json
scripts/: capture_android_permission_ux_run.py  check_release_gate.py  create_device_lab_run_template.py  generate_completion_audit.py  generate_device_lab_readiness.py  generate_device_lab_run_plan.py  generate_proof_coverage.py  generate_proof_retry_decision.py  generate_support_matrix.py  repack_sherpa_aar.py  validate_all_scaffolds.py  validate_android_permission_ux.py  validate_android_permission_ux_run.py  validate_battery_thermal_log.py  validate_benchmark_result.py  validate_completion_audit.py  validate_device_artifact_validators.py  validate_device_lab_bundle.py  validate_device_lab_bundle_validator.py  validate_device_lab_evidence_intake_transition.py  validate_device_lab_evidence_root.py  validate_device_lab_evidence_root_validator.py  validate_device_lab_intake_report.py  validate_device_lab_kit.py  validate_device_lab_matrix.py  validate_device_lab_matrix_validator.py  validate_device_lab_preflight.py  validate_device_lab_readiness.py  validate_device_lab_run_plan.py  validate_device_lab_run_template_generator.py  validate_device_metadata.py  validate_g002_foundation.py  validate_g003_asr_scaffold.py  validate_g004_mt_scaffold.py  validate_g005_cloud_opt_in.py  validate_g006_qa_scaffold.py  validate_mobile_mcp_qa.py  validate_mobile_mcp_run_artifacts.py  validate_model_manifest.py  validate_model_manifest_validator.py  (+8 more)
(+131 files in other folders)
